// Vitest Snapshot v1

exports[`stub request > do not fetch request 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "Zm9vYmFy",
    "requestId": 123,
    "responseCode": 200,
    "responseHeaders": [],
  },
]
`;

exports[`stub request > with a different web resource 1`] = `
[
  {
    "name": "Content-Type",
    "value": "application/json",
  },
  {
    "name": "Location",
    "value": "http://json.org/image.svg",
  },
]
`;

exports[`stub request > with a different web resource containing different location header 1`] = `
[
  {
    "name": "Content-Type",
    "value": "application/json",
  },
  {
    "name": "Location",
    "value": "http://json.org/image.svg",
  },
]
`;

exports[`stub request > with a function 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "Zm9vYmFy",
    "requestId": 123,
    "responseCode": 200,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
    ],
  },
]
`;

exports[`stub request > with a function returning empty body 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "",
    "requestId": 123,
    "responseCode": 200,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
    ],
  },
]
`;

exports[`stub request > with a function returning undefined 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": undefined,
    "requestId": 123,
    "responseCode": 200,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
    ],
  },
]
`;

exports[`stub request > with a text 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "Zm9vYmFy",
    "requestId": 123,
    "responseCode": 200,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
    ],
  },
]
`;

exports[`stub request > with an object 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "eyJmb28iOiJiYXIifQ==",
    "requestId": 123,
    "responseCode": 200,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
    ],
  },
]
`;

exports[`stub request > with modified headers 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "eyJmb28iOiJiYXIifQ==",
    "requestId": 123,
    "responseCode": 200,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
      {
        "name": "removed",
        "value": undefined,
      },
      {
        "name": "added",
        "value": "string",
      },
    ],
  },
]
`;

exports[`stub request > with modified headers fn 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "eyJmb28iOiJiYXIifQ==",
    "requestId": 123,
    "responseCode": 200,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
      {
        "name": "Content-Type",
        "value": "text/xml",
      },
    ],
  },
]
`;

exports[`stub request > with modified status code 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "eyJmb28iOiJiYXIifQ==",
    "requestId": 123,
    "responseCode": 1234,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
    ],
  },
]
`;

exports[`stub request > with modified status code fn 1`] = `
[
  "Fetch.fulfillRequest",
  {
    "body": "eyJmb28iOiJiYXIifQ==",
    "requestId": 123,
    "responseCode": 5678,
    "responseHeaders": [
      {
        "name": "Content-Type",
        "value": "application/json",
      },
    ],
  },
]
`;
